# thonnyX

./: .editorconfig  CREDITS.rst  README.rst  Thonny.py  Thonny.spec  pyproject.toml  start.py  temp.py  variables.py
pyrob/: __init__.py  api.py  utils.py
python/Scripts/: get_gprof  get_objgraph  numba  undill
tasks/: 1.py  config.json
tasks/lpyrob/: custom_1_1.py  prim_12_10.py  prim_12_8.py  prim_13_6.py  prim_14_5.py  prim_15_7.py  prim_16_2.py  task_2_1.py  task_2_2.py  upr_12_6.py  upr_12_7.py  upr_13_4.py  upr_13_5.py  upr_13_7.py  upr_13_8.py  upr_13_9.py  upr_14_1_b.py  upr_14_5.py  upr_14_6.py  upr_15_2.py  upr_15_5_1.py  upr_15_6_2.py  upr_16_1_a.py  upr_16_1_b.py  upr_16_5.py
tasks/pyrob/789/: prim_16_3.py
tasks/pyrob/7prim/: prim_12_1.py  prim_12_11.py  prim_12_12.py  prim_12_9.py  prim_13_7.py  prim_14_1.py  prim_14_6.py  prim_15_5.py  prim_15_6.py  prim_15_8.py  prim_16_1.py
tasks/pyrob/7upr/: upr_12_1.py  upr_12_8.py  upr_13_3.py  upr_13_6.py  upr_14_1_a.py  upr_14_2.py  upr_14_3.py  upr_14_4.py  upr_15_5_2.py  upr_15_6_1.py  upr_16_2.py  upr_16_3.py  upr_16_4.py
tasks/pyrob/other/: custom_1_2.py
tasks/pyrob/task/: task_1_2.py  task_2_4.py
tasks/tasks/7/: 19_3_1.py  19_3_2.py  19_3_3.py  19_3_4.py  19_3_5.py  1_1.py
tasks/turtle/: __init__.py
tasks/turtle/6/: 18_2.py  18_3.py  18_4.py  18_5_a.py  18_5_b.py  18_5_c.py  18_6_a.py  18_6_b.py  18_6_c.py  blank.py
thonny/: __init__.py  assistance.py  backend.py  common.py  editors.py  first_run.py  running.py  shell.py  workbench.py
thonny/locale/ru_RU/LC_MESSAGES/: registered.json
thonny/plugins/: about.py
thonny/plugins/cpython_backend/: cp_launcher.py
thonny/plugins/cpython_ssh/: cps_back.py
thonny/plugins/ev3/: ev3_back.py
thonny/plugins/micropython/: bare_metal_backend.py  os_mp_backend.py
