[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project]
name = "thonny"
version = "6.0.0.dev1"
description = "Python IDE for beginners"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aivar Annamaa and others", email = "thonny@googlegroups.com" },
]
keywords = [
    "IDE",
    "debugger",
    "education",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Text Editors",
]
dependencies = [
    "pyserial>=3.4",
    "pylint>=2.4",
    "docutils>=0.16",
    "mypy>=0.761",
    "asttokens>=2.0",
    "Send2Trash>=1.5",
    "minny",
]

[project.optional-dependencies]
ssh = [
  "paramiko>=2.12.0"
]
pty = [
  "ptyprocess>=0.7.0"
]

[project.urls]
"Bug tracker" = "https://github.com/thonny/thonny/issues"
Homepage = "https://thonny.org"
"Source code" = "https://github.com/thonny/thonny"

[project.gui-scripts]
thonny = "thonny:launch"


[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pyrefly",
    "requests",
    "pip",
    "babel",
    "polib",
    "pyperclip",
    "esptool",
    "paramiko",
    "ruff",
    "websockets",
    "ptyprocess; sys_platform == 'linux' or sys_platform == 'darwin'",
    "dbus-next==0.2.*; sys_platform == 'linux'",
    'adafruit_board_toolkit==1.1.*; sys_platform == "win32" or sys_platform == "darwin"'
]

[tool.uv.build-backend]
module-name = "thonny"
module-root = ""
source-exclude = ["registered.json", ".mypy_cache"]
source-include = [
    "defaults.ini",
    "CHANGELOG.rst",
    "CREDITS.rst",
    "LICENSE.txt",
    "README.rst",
    "requirements.txt",
    "licenses/ECLIPSE-ICONS-LICENSE.txt",
    "packaging/linux/thonny.1",
    "packaging/icons/*.png",
    "packaging/linux/org.thonny.Thonny.appdata.xml",
    "packaging/linux/org.thonny.Thonny.desktop",
]

[tool.uv.sources]
minny = { path = "../minny", editable = true }

[tool.black]
line-length = 100
target_version = ['py38', 'py39', 'py310']
exclude = ".*api_stubs|typeshed|vendored_libs"

[tool.isort]
profile = "black"
src_paths = ["thonny"]
line_length = 100
skip = ["typeshed", "api_stubs", "esp32_api_stubs", "esp_common_api_stubs", "base_api_stubs", "generic_api_stubs", "vendored_libs"]

[tool.pyrefly]
project-includes = [
    "thonny/__init__.py",
    "thonny/common.py",
    "thonny/backend.py",
    "thonny/plugins/micropython/__init__.py",
    "thonny/plugins/micropython/mp_back.py",
    "thonny/plugins/micropython/bare_metal_backend.py",
    "thonny/plugins/micropython/os_mp_backend.py",
]
search-path = [""]

[tool.ruff]
include = [
    "thonny/__init__.py",
    "thonny/common.py",
    "thonny/backend.py",
    "thonny/plugins/micropython/__init__.py",
    "thonny/plugins/micropython/mp_back.py",
    "thonny/plugins/micropython/bare_metal_backend.py",
    "thonny/plugins/micropython/os_mp_backend.py",
]

[tool.ruff.lint]
ignore = [
    "E402"
]